# flib

./: .gitignore  README.md  pyproject.toml
flib/models/: base.py  clip.py  ollama.py  openai.py  sam.py
flib/models/llms/: azure.py  base_llm.py  bedrock.py  ollama.py  openai.py  utils.py
flib/utils/: chunk_text.py  images.py  parallel.py  qdrant.py  stream.py  text.py
tests/models/llms/: test_bedrock.py  test_ollama.py  test_openai.py
tests/utils/: test_chunk_text.py  test_parallel.py
