[tool.poetry]
name = "flib"
version = "0.1.0"
description = ""
authors = ["acordier <acordier@fonctionlabs.com>",
           "mcordier <mcordier@fonctionlabs.com>",
           "jvassalo <jvassalo@fonctionlabs.com>"]
readme = "README.md"
packages = [{include = "flib"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
qdrant-client = "^1.9.0"
openai = "^1.23.6"
segment-anything = "^1.0"
segment-anything-fast = "^0.1.2"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
boto3 = "^1.34.94"
joblib = "^1.4.2"
ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
